2004-03-02 Braden McDaniel  <braden@endoframe.com>

	* README:  List Boost as a dependency.

2004-03-02 Braden McDaniel  <braden@endoframe.com>

	Changed the lookat license to the GPL.  (The LGPL doesn't make
	very much sense for ordinary executables.)

	* COPYING:  Added file.
	* README:  Updated license summary.
	* src/lookat/lookat.cpp:  Changed license notice to refer to the
	GPL.

2004-03-02 Braden McDaniel  <braden@endoframe.com>

	PROTO field default value declarations should begin a new scope
	rooted at the scope outside the PROTO definition.  In
	particular, this should work:

	PROTO Node0 [] { Group {} }

	PROTO Node1 [
	  field SFNode field0 Node0 {}
	] {
	  Collision {
	    proxy IS field0
	  }
	}

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/Vrml97Parser.hpp

2004-03-02 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp:  Removed obsolete
	doc-comment.

2004-03-01 Braden McDaniel  <braden@endoframe.com>

	Changed parser to fail fast on errors rather than try to
	recover.  Modified the invalid_vrml exception to store the URL
	along with the line and column numbers for the error.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/Vrml97Parser.hpp
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h

2004-03-01 Braden McDaniel  <braden@endoframe.com>

	* ide-projects/Makefile.am:  Added Visual C++ 7.1 project files.
	* ide-projects/Windows/VisualC7_1/OpenVRML/OpenVRML.sln:  Added
	file.
	* ide-projects/Windows/VisualC7_1/OpenVRML/antlr/antlr.vcproj:
	Added file.
	* ide-projects/Windows/VisualC7_1/OpenVRML/lookat/lookat.vcproj:
	Added file.
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml/openvrml.vcproj:
	Added file.
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml-gl/openvrml-gl.vcproj:
	Added file.